# tomino

./: $null  .antigravityignore  .claudeignore  .env.bundle  .env.example  .gitignore  INSTALLATION.md  LICENSE  README.md  RELEASE.md  STRIPE_DEV.md  add_route_dividendes.py  app.py  build_desktop.bat  bump.js  calculs.py  crypto.py  database.py  dev_desktop.bat  emails.py  grok.py  latest.json.template  prices.py  release.bat  requirements.txt  start.bat
.github/: confidentialite-sync.md  copilot-instructions.md  evolutions.md  services.md
.github/workflows/: release.yml  test.yml
docs/: index.html
front/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
front/src/: App.jsx  api.js  cache.js  index.css
front/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
front/src-tauri/icons/: icon.icns
front/src-tauri/installer/: generate_assets.py
front/src-tauri/src/: main.rs
front/src/components/: CustomSelect.jsx  DateInput.jsx  DemoBanner.jsx  IaConsentModal.jsx  MonthPicker.jsx  Pagination.jsx  PlusBadge.jsx  Sidebar.jsx  Topbar.jsx  UpcomingEventsPanel.jsx  UpdateBanner.jsx
front/src/pages/: ActifForm.jsx  Alertes.jsx  AnalyseIA.jsx  AssuranceVie.jsx  Chat.jsx  Crypto.jsx  Dashboard.jsx  Dividendes.jsx  Livrets.jsx  MentionsLegales.jsx  Notifications.jsx  (+8 more)
tests/: test_actifs_resume_cache.py  test_alertes_dividendes_fiscal.py  test_auth_api.py  test_backend_api.py  test_comptes_etrangers.py  test_database_fiscal.py  test_devices_api.py  test_historique_snapshots.py  test_livrets_assurance_vie.py  test_sync_events.py
(+6 files in other folders)
