[package]
name = "tomino"
version = "0.1.5"
description = "Tomino — Suivi patrimonial"
authors = ["Tomino"]
license = ""
repository = ""
default-run = "tomino"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "window-all", "updater", "shell-sidecar"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
